--- a/_posts/2022-09-20-flare_on9_2022.md
+++ b/_posts/2022-09-20-flare_on9_2022.md
@@ -1,14 +1,14 @@
 ---
-title: "Writeup FLARE-ON9 2022"
+title: "Writeup Flare-on9 2022"
 author: vietzettt
 date: 2022-09-20
 category: ctf
 layout: post
 ---
 
-# test1
+---
 
-# test2
-
-# test3
+### test1
+### test2
+### test3
 
