update error file fomat and flare

--- a/_posts/2022/2022-09-28-flare_on9_2022.md
+++ b/_posts/2022/2022-09-28-flare_on9_2022.md
@@ -7,14 +7,14 @@ layout: post
 cover: #thêm ảnh bìa cho trang 
 ---
 
---- 
+---
 
 ##### **Nguồn ở đây nhá các bạn:** [💀**Nhấp em đi**👆](https://github.com/vietzettt/vietzettt.github.io/tree/main/src/2022/)
 <!-- chỗ này ta sẽ chèn link dẫn đến nguồn tổng nhé-->
 
 ### Task 1
 
-![]()
+![](/link /)
 <!-- chèn img tự động căn giữa -->
 
 ```code
