fix theme and delete share

--- a/_posts/2022/2022-09-28-flare_on9_2022.md
+++ b/_posts/2022/2022-09-28-flare_on9_2022.md
@@ -3,7 +3,7 @@ title: Writeup Flare-on9 2022 #Tiêu đề hiện thị trên trang
 author: vietzettt
 date:  2022-09-28 #Ngày tạo
 layout: post
-cover: #thêm ảnh bìa cho trang 
+cover: /src/2022/Flare-on9/00_img_pages/FlareOn_Logo.svg #thêm ảnh bìa cho trang 
 ---
 
 ---
@@ -13,15 +13,9 @@ cover: #thêm ảnh bìa cho trang
 
 ### Task 1
 
-![](/link /)
-<!-- chèn img tự động căn giữa -->
+<!--![](/link /) chèn img tự động căn giữa -->
 
-```code
-    pass
-```
+<!-- ```code
+    
+``` -->
 <!-- chèn code vào pass nhá-->
-### Task 2
-
-### Task 3
-
-### Task 4
