fix error post wreck and link src

--- a/_posts/2022/2022-10-02-wreckctf_2022.md
+++ b/_posts/2022/2022-10-02-wreckctf_2022.md
@@ -3,12 +3,12 @@ title: Writeup WRECKCTF 2022 #Tiêu đề hiện thị trên trang
 author: vietzettt
 date:  2022-10-02 #Ngày tạo
 layout: post
-cover: /src/2022/Wreckctf/00_cover.png/ #thêm ảnh bìa cho trang 
+cover: /src/2022/Wreckctf/img_pages/00_cover.png/ #thêm ảnh bìa cho trang 
 ---
 
 ---
 
-##### **Nguồn ở đây nhá các bạn:** [💀**Nhấp em đi**👆](/src/2022/Wreckctf/)
+##### **Nguồn ở đây nhá các bạn:** [💀**Nhấp em đi**👆](https://github.com/vietzettt/vietzettt.github.io/tree/main/src/2022/Wreckctf/)
 <!-- chỗ này ta sẽ chèn link dẫn đến nguồn tổng nhé-->
 
 Chào mọi người lại quay trở lại với một giải đấu được gọi là vừa sức đối với những người mới và trung bình kinh nghiệm còn thấp của tôi. Sau đây không lòng vòng tôi đi vào mục tiêu chính với 4/6 thử thách RE - Dịch ngược tôi hoàn thành.
