--- a/_posts/2022/2022-10-02-wreckctf_2022.md
+++ b/_posts/2022/2022-10-02-wreckctf_2022.md
@@ -3,7 +3,7 @@ title: Writeup WRECKCTF 2022 #Tiêu đề hiện thị trên trang
 author: vietzettt
 date:  2022-10-02 #Ngày tạo
 layout: post
-cover: /src/2022/Wreckctf/img_pages/00_cover.webp/ #thêm ảnh bìa cho trang 
+cover: /src/2022/Wreckctf/img_pages/00_cover.webp #thêm ảnh bìa cho trang 
 ---
 
 ---
