--- a/_posts/Learn/0000-08-01-rootme.md
+++ b/_posts/Learn/0000-08-01-rootme.md
@@ -9,16 +9,8 @@ cover: /src/Learn/RootMe/00_cover_logo.svg
 
 ---
 
-Link: [`https://www.root-me.org/en/Challenges/Cracking/`](https://www.root-me.org/en/Challenges/Cracking/)
+[`https://www.root-me.org/en/Challenges/Cracking/`](https://www.root-me.org/en/Challenges/Cracking/)
 
 ##### **Nguồn các chall và solve:** [💀**👆👆👆**💀](https://github.com/vietzettt/vietzettt.github.io/tree/main/src/Learn/RootMe)
 
-### Task 1
-
-### Task 2
-
-### Task 3
-
-### Task 4
-
-### Task 5
+### Godot - 0 protection
