update flare-on writeup

--- a/_posts/2022/2022-10-01-flare_on9_2022.md
+++ b/_posts/2022/2022-10-01-flare_on9_2022.md
@@ -1,20 +1,73 @@
 ---
-title: Writeup Flare-on9 2022 #Tiêu đề hiện thị trên trang
+title: Writeup Flare-on9 2022 
 author: vietzettt
-date:  2022-10-1 #Ngày tạo
+date:  2022-10-1 
 layout: post
-published: false
-cover: /src/2022/Flare-on9/00_img_pages/FlareOn_Logo.svg #thêm ảnh bìa cho trang 
+published: true
+cover: /src/2022/Flare-on9/00_img_pages/FlareOn_Logo.svg
 ---
 
 ---
 
-##### **Nguồn ở đây nhá các bạn:** [💀**Nhấp em đi**👆](/src/2022/Flare-on9/)
-<!-- chỗ này ta sẽ chèn link dẫn đến nguồn tổng nhé-->
+##### **Nguồn ở đây nhá các bạn:** [💀**👆👆👆**💀](https://www.mandiant.com/resources/blog/flareon9-challenge-solutions)
 
-### 1: (Solved)
+Xin chào các bạn đến với writeupp lần này. Lần đầu gà con vào đảo của các lãnh làng sẽ như thế nào nhỉ? Hốt hoảng thật sự hí hí...
+Sau quá trình nghiên cứu và tìm hiểu tôi sẽ viết hoàn thành tất của các chall của mùa giải năm nay cho mn được tham khảo nhé. ([Link](https://nextheia.com/tags/flare-on-9-write-up/))
 
-### 2: (Solved)
+Ok bắt đầu thôi... gét gô...
+
+### 1: Flaredle (Solved)
+
+Description:
+
+```text
+Welcome to Flare-On 9!
+
+You probably won't win. Maybe you're like us and spent the year playing Wordle. We made our own version that is too hard to beat without cheating.
+
+Play it live at: http://flare-on.com/flaredle/
+
+7-zip password: flare
+```
+
+![title](/src/2022/Flare-on9/01_Flaredle/00_titile.png)
+Chúng ta được nhận 4 file. Đầu tiên sẽ mở file đuôi `.html` để xem nội dung hiện thị là gì? Ta thấy nó sử dụng `js` được cung cấp sẵn. Thế nên là tôi mở file `js` check xem họ viết gì và dấu gì ở đó.
+Xem qua ta thấy có hàm `if` kiểm tra chuỗi từ người dùng và chuỗi flag nằm trong file `script.js`:
+![function check](/src/2022/Flare-on9/01_Flaredle/01_function_check.png)
+Ta tìm kiếm `rightGuessString` xem nó là gì??
+![var right](/src/2022/Flare-on9/01_Flaredle/02_var_rightguessstring.png)
+Ok nhận thấy biến này được lấy từ thứ `57` trong file `words.js`. Từ đó ta nhận được: `flareonisallaboutcats`. Kiểm tra lại trên web thỏa mãn.
+![check result](/src/2022/Flare-on9/01_Flaredle/03_check_result.png)
+
+### 2: PixelPocker (Solved)
+
+Description
+
+```text
+I said you wouldn't win that last one. I lied. The last challenge was basically a captcha. Now the real work begins. Shall we play another game?
+
+7-zip password: flare
+```
+
+Công cụ được sử dụng:
+
+- CFF Explorer
+- IDA Pro
+- Python
+  - PIL: pip install pillow (1 fork từ thư viện PIL của python được sử dụng để xử lý hình ảnh)
+
+Nội dung của `readme.txt`
+
+```text
+Welcome to PixelPoker ^_^, the pixel game that's sweeping the nation!
+
+Your goal is simple: find the correct pixel and click it
+
+Good luck!
+```
+
+Chương trình hướng đến việc cần phải lưạ chọn 1 điểm ảnh với tọa độ hiện thị trên cửa sổ và có đối ta 10 lần thử.
+![open file](/src/2022/Flare-on9/02_PixelPocker/00_open_file.png)
 
 `LoadImageW` function  - Loads an icon, cursor, animated cursor, or bitmap (tải icon, con trỏ, ... )
 
@@ -22,7 +75,7 @@ cover: /src/2022/Flare-on9/00_img_pages/FlareOn_Logo.svg #thêm ảnh bìa cho t
 
 `w1nN3r_W!NneR_cHick3n_d1nNer@flare-on.com`
 
-### 3: ()
+### 3: Magic_8_Ball (Solved)
 
 `https://www.codeproject.com/Articles/4210/C-Reverse-Disassembly`
 
@@ -35,4 +88,20 @@ cover: /src/2022/Flare-on9/00_img_pages/FlareOn_Logo.svg #thêm ảnh bìa cho t
 ``` -->
 <!-- chèn code vào pass nhá-->
 
-https://stackoverflow.com/questions/65844544/exemple-using-bcryptderivekeypbkdf2-from-msdn
+<https://stackoverflow.com/questions/65844544/exemple-using-bcryptderivekeypbkdf2-from-msdn>
+
+### 4: darn_mice
+
+### 5: t8
+
+### 6: alamode
+
+### 7: anode
+
+### 8: backdoor
+
+### 9: encryptor
+
+### 10: Nur_geträumt
+
+### 11: the_challenge_that_shall_not_be_named
