update flare-on 9

--- a/_posts/2022/2022-10-01-flare_on9_2022.md
+++ b/_posts/2022/2022-10-01-flare_on9_2022.md
@@ -26,8 +26,6 @@ Welcome to Flare-On 9!
 You probably won't win. Maybe you're like us and spent the year playing Wordle. We made our own version that is too hard to beat without cheating.
 
 Play it live at: http://flare-on.com/flaredle/
-
-7-zip password: flare
 ```
 
 ![title](/src/2022/Flare-on9/01_Flaredle/00_titile.png)
@@ -45,8 +43,6 @@ Description
 
 ```text
 I said you wouldn't win that last one. I lied. The last challenge was basically a captcha. Now the real work begins. Shall we play another game?
-
-7-zip password: flare
 ```
 
 Công cụ được sử dụng:
@@ -66,29 +62,61 @@ Your goal is simple: find the correct pixel and click it
 Good luck!
 ```
 
+Đầu tiên ta mở bằng `CFF Explorer` quan sát metadata của file exe. Và ta có chú ý về resourse là dạng Bitmaps (ảnh) gồm 2 bức ảnh với tên 129 và 133.
+![check metadata](/src/2022/Flare-on9/02_PixelPocker/00_check_cff.png)
 Chương trình hướng đến việc cần phải lưạ chọn 1 điểm ảnh với tọa độ hiện thị trên cửa sổ và có đối ta 10 lần thử.
 ![open file](/src/2022/Flare-on9/02_PixelPocker/00_open_file.png)
 
-`LoadImageW` function  - Loads an icon, cursor, animated cursor, or bitmap (tải icon, con trỏ, ... )
+và tôi thử xem ra kết quả là gì:
+![test](/src/2022/Flare-on9/02_PixelPocker/01_result_test_1.png)
+Ta nhận được thông báo `Womp womp...:(`. Rồi chúng ta sẽ mở chúng bằng IDA Pro kiếm strings này nằm ở hàm nào?.
+![open ida](/src/2022/Flare-on9/02_PixelPocker/02_open_ida.png)
+Ta sửa đổi lại tên của một số biến nhận diện rồi.
+Như đã thấy thì ta thấy có hàm kiểm tra 2 vị trí `x,y` với một giá trị có sẵn lấy dư với `uX` và `uY`.
+![see var ux](/src/2022/Flare-on9/02_PixelPocker/03_see_var_ux.png)
+Ta cần tìm hiểu xem biến `dword_413280` là gì? thì nó nằm trong hàm `BitBlt` - 1 hàm thực hiện truyền khối bit dữ liệu tương ứng với một hình chữ nhật pixel từ ngữ cảnh thiết bị nguồn đã chỉ định sang ngữ cảnh thiết bị đích.
 
-`95,313`
+```C++
+BOOL BitBlt(
+    [in] HDC   hdc,
+    [in] int   x,
+    [in] int   y,
+    [in] int   cx,
+    [in] int   cy,
+    [in] HDC   hdcSrc,
+    [in] int   x1,
+    [in] int   y1,
+    [in] DWORD rop
+);
+```
 
-`w1nN3r_W!NneR_cHick3n_d1nNer@flare-on.com`
+Do đó `dword_413280` là `cx` - là chiều rộng của nguồn (ở trường hợp này là hình ảnh); còn `cy` - là chiều cao của hình ảnh.
+
+```text
+[in] cx
+The width, in logical units, of the source and destination rectangles.
+
+[in] cy
+The height, in logical units, of the source and the destination rectangles.
+```
+
+![so sanh](/src/2022/Flare-on9/02_PixelPocker/04_so_sanh.png)
+Bước so sánh ở dòng 43 và 46 kiểm tra giá trị của tọa độ click chuột theo trục `(x,y)` thỏa mãn điều kiện sau:
+
+x = 0x52414c46 % độ rộng ảnh ID 133 = 0x52414c46 % 741 = 95
+
+y = 0x6e4f2d45 % độ cao ảnh ID 133 = 0x6e4f2d45 % 641 = 313
+
+Như vậy ta click đúng tọa độ trên thì sẽ chuyển sang luồng khác và có kết quả:
+![result](/src/2022/Flare-on9/02_PixelPocker/05_result.png)
 
 ### 3: Magic_8_Ball (Solved)
 
-`https://www.codeproject.com/Articles/4210/C-Reverse-Disassembly`
+Description:
 
-<!-- `flareonisallaboutcats@flare-on.com` -->
-
-<!--![](/link /) chèn img tự động căn giữa -->
-
-<!-- ```code
-    
-``` -->
-<!-- chèn code vào pass nhá-->
-
-<https://stackoverflow.com/questions/65844544/exemple-using-bcryptderivekeypbkdf2-from-msdn>
+```text
+You got a question? Ask the 8 ball!
+```
 
 ### 4: darn_mice
 
