--- a/_posts/2022/2022-10-01-flare_on9_2022.md
+++ b/_posts/2022/2022-10-01-flare_on9_2022.md
@@ -103,9 +103,9 @@ The height, in logical units, of the source and the destination rectangles.
 ![so sanh](/src/2022/Flare-on9/02_PixelPocker/04_so_sanh.png)
 Bước so sánh ở dòng 43 và 46 kiểm tra giá trị của tọa độ click chuột theo trục `(x,y)` thỏa mãn điều kiện sau:
 
-x = 0x52414c46 % độ rộng ảnh ID 133 = 0x52414c46 % 741 = 95
+x = 0x52414c46 % độ rộng ảnh = 0x52414c46 % 741 = 95
 
-y = 0x6e4f2d45 % độ cao ảnh ID 133 = 0x6e4f2d45 % 641 = 313
+y = 0x6e4f2d45 % độ cao ảnh = 0x6e4f2d45 % 641 = 313
 
 Như vậy ta click đúng tọa độ trên thì sẽ chuyển sang luồng khác và có kết quả:
 ![result](/src/2022/Flare-on9/02_PixelPocker/05_result.png)
