update task3 of flare-on and update rootme fork

--- a/_posts/2022/2022-10-01-flare_on9_2022.md
+++ b/_posts/2022/2022-10-01-flare_on9_2022.md
@@ -118,7 +118,45 @@ Description:
 You got a question? Ask the 8 ball!
 ```
 
-### 4: darn_mice
+Đầu tiên ta giải nén thì ta nhận được nhiều file không biết file nào sẽ là quan trọng nên chúng ta trước mắt ta cứ quan tâm chính vào file chương trình `.exe` nha.
+![giai nen](/src/2022/Flare-on9/03_Magic_8_Ball/00_giai_nen.png)
+Mở file thực thi nên thấy nhập 1 gì đó rồi Enter thì ta nhập được các thông điệp và nhấn các mũi tên thì ta thấy quả bóng lắc:
+![open](/src/2022/Flare-on9/03_Magic_8_Ball/01_open.png)
+Ta mở nó bằng `IDA Pro` xem sao nhá. Thì thấy được các string hiện thị lúc nãy đều nằm cùng 1 hàm `sub_4012B0`:
+![string](/src/2022/Flare-on9/03_Magic_8_Ball/02_string.png)
+Tiếp tục theo dấu xem hàm nào sẽ call đến hàm này (chúng ta sẽ rename là `predict_string_func`) thì thấy nó được gọi từ `sub_4027A0`, có lẽ đây là hàm main của chương trình. Để ý phía dưới có một vòng lặp do while, rất giống với vòng lặp xử lý các sự kiện (event) rất hay gặp trong các ứng dụng GUI.
+![main](/src/2022/Flare-on9/03_Magic_8_Ball/03_func_main.png)
+Đi dạo quanh các hàm trong vòng lặp do while thì ta nhận ra đoạn này giống như đoạn điều hướng của quả bóng:
+![04](/src/2022/Flare-on9/03_Magic_8_Ball/04.png)
+và kéo xuống dưới thì là các câu lệnh điều kiện kiểm tra lồng nhau. Trường hợp này ta convert các số `76,85,82,68` sang kiểu dữ liệu `char`:
+![command if](/src/2022/Flare-on9/03_Magic_8_Ball/05_command_if.png)
+
+Ta nhận được: `LLURULDUL`. Sau khi kiểm tra chuỗi này xong thì sẽ so sánh chuỗi có độ dài 15 ký tự:
+
+```c
+result = strncmp(v21, (const char *)(this + 92), 15u);
+```
+
+Ta debug tại IDA luôn điều hướng quả bóng như trên mình phân tích rồi ta nhập 1 string nào đó rồi đặt `breakpoint` (F2) tại hàm so sánh này thì ta nhận được như sau:
+![debug check](/src/2022/Flare-on9/03_Magic_8_Ball/06_debug_check.png)
+Như vậy ta nhận thấy có 2 câu lệnh 3 câu lệnh `push` trước khi gọi hàm `strncmp` có nghĩa là truyền tham số vào hàm đó tương ứng: `push` từ phải qua trái -> ta thấy thanh ghi `ecx` sẽ là string mình nhập và thanh ghi `eax` chính là nguồn sẽ so sánh.
+![eax](/src/2022/Flare-on9/03_Magic_8_Ball/07_check_eax.png)
+và mọi thứ coi như đã xong kiếm được string so sánh là: `gimme flag pls?`
+Chạy lại chương trình, nhập đúng chuỗi phím định hướng quả bóng và nhập câu hỏi vừa tìm được sẽ in ra flag:
+![flag](/src/2022/Flare-on9/03_Magic_8_Ball/08_result.png)
+
+```text
+U_cRackeD_th1$_maG1cBaLL_!!_@flare-on.com
+```
+
+<!-- ### 4: darn_mice
+
+Description:
+
+```text
+"If it crashes its user error." - Flare Team
+
+```
 
 ### 5: t8
 
@@ -132,4 +170,4 @@ You got a question? Ask the 8 ball!
 
 ### 10: Nur_geträumt
 
-### 11: the_challenge_that_shall_not_be_named
+### 11: the_challenge_that_shall_not_be_named -->
