--- a/_posts/Learn/0000-08-01-rootme.md
+++ b/_posts/Learn/0000-08-01-rootme.md
@@ -13,4 +13,4 @@ cover: /src/Learn/RootMe/00_cover_logo.svg
 
 ##### **Nguồn các chall và solve:** [💀**👆👆👆**💀](https://github.com/vietzettt/vietzettt.github.io/tree/main/src/Learn/RootMe)
 
-### Godot - 0 protection
+<!-- ### Godot - 0 protection -->
