--- a/_posts/2022/2022-10-01-flare_on9_2022.md
+++ b/_posts/2022/2022-10-01-flare_on9_2022.md
@@ -149,15 +149,42 @@ Chạy lại chương trình, nhập đúng chuỗi phím định hướng quả
 U_cRackeD_th1$_maG1cBaLL_!!_@flare-on.com
 ```
 
-<!-- ### 4: darn_mice
+### 4: darn_mice
 
 Description:
 
 ```text
 "If it crashes its user error." - Flare Team
-
 ```
 
+Đề bài cho 1 file `darn_mice.exe`. Đầu tiên tôi sẽ kiểm tra các thông tin của file bằng phần mềm `Detect It Easy` (viết tắt của chương trình sẽ là `die` màu vàng) chúng ta biết được đây là 1 ứng dụng console viết bằng C++.
+![open check die](/src/2022/Flare-on9/04_darn_mice/00_open_check_die.png)
+Tôi vào console chạy thử không cho tham số thì không thấy ra gì và thêm tham số thì có ra kết quả -> bài yêu cầu truyền tham số như password nếu đúng sẽ in ra flag gì đó.
+![open console](/src/2022/Flare-on9/04_darn_mice/01_open_console.png)
+Để kiểm tra và làm tôi mở IDA thì ta thấy
+![open ida check main](/src/2022/Flare-on9/04_darn_mice/02_open_ida_check_main.png)
+Như vậy hàm này chính xác là yêu cầu ta truyền vào là 2 `argc`.
+Nếu đủ sẽ vào chương trình kiểm tra `password`:
+![func check pass](/src/2022/Flare-on9/04_darn_mice/03_func_check_pass.png)
+Ở đây ta phân tích như sau: (sửa tên lại ta có như sau)
+![rename](/src/2022/Flare-on9/04_darn_mice/04_rename.png)
+
+- Chuỗi ta nhập thì sẽ gọi là `pbPassword`.
+- Sau đó sẽ in ra màn hình -> tiếp đến là kiểm tra kích thước của `pbPassword`: `if (!v3 || v3 > 0x23)` phần này check strlen phải thỏa mãn tồn tại và không được lớn hơn `0x23` nó là 35 -> kích thước của `pbPassword` là `35`:
+
+Tiếp đến ta để ý đến vòng lặp for:
+
+- Đầu tiên, thực hiện allocation một vùng nhớ, kích thước 0x1000 lưu vào `v2`
+- Sau đó là lấy từng ký tự của `pbPassword` đem cộng tương ứng với vị trí của biến `magic` đã được khai báo và gán giá trị ở đầu func.
+- Gán giá trị này cho byte đầu tiên của vùng nhớ vừa được khởi tạo
+- Nhảy đến vào chạy code tại vùng nhớ đó (tương ứng với lệnh gọi `v2(v2)`)
+- in ra chuỗi `Nibble...`
+- Tiếp tục vòng lặp
+
+Qua đoạn for này nếu nhập đúng, chương trình sẽ dùng password này để decrypt ra flag
+
+
+<!-- http://diendan.congdongcviet.com/threads/t35646::calling-syntax-calling-convertion.cpp -->
 ### 5: t8
 
 ### 6: alamode
@@ -170,4 +197,9 @@ Description:
 
 ### 10: Nur_geträumt
 
-### 11: the_challenge_that_shall_not_be_named -->
+### 11: the_challenge_that_shall_not_be_named
+
+<!-- 
+https://sec.vnpt.vn/2022/11/flare-on-9-writeup-part2-chal8-11/
+https://sec.vnpt.vn/2022/11/flare-on-9-writeup-part1-chal1-7/
+ -->
