--- a/_posts/Learn/0000-08-01-rootme.md
+++ b/_posts/Learn/0000-08-01-rootme.md
@@ -3,7 +3,7 @@ title: 🐳Root Me
 author: vietzettt
 date: 0000-08-01
 layout: post
-published: true 
+published: false 
 cover: /src/Learn/RootMe/00_cover_logo.svg
 ---
 
