update flare-on9 task 4

--- a/_posts/2022/2022-10-01-flare_on9_2022.md
+++ b/_posts/2022/2022-10-01-flare_on9_2022.md
@@ -183,6 +183,32 @@ Tiếp đến ta để ý đến vòng lặp for:
 
 Qua đoạn for này nếu nhập đúng, chương trình sẽ dùng password này để decrypt ra flag
 
+Vậy là bài toán đặt ra là xây dựng code làm sao để thực hiện đúng 1 lệnh assembly (opcode) để chương trình không bị crash và sau đó lại quay lại thực hiện theo flow cũ của chương trình (tiếp tục in ra dòng `Nubble...`).
+
+![debug](/src/2022/Flare-on9/04_darn_mice/05_debug.png)
+
+Tôi thử với pass là `123456789`. Ta thấy dòng code vị trí `.text:01011155` là nó cộng rồi lưu vào thanh ghi `ecx`; tiếp theo mov địa chỉ ô nhớ sẽ gọi cho thanh ghi `edx`. Khi gọi vào vùng nhớ, gặp `opcode` nào đó để ngay lập tức quay lại để tiếp tục flow cũ chạy như bình thường.
+
+![06](/src/2022/Flare-on9/04_darn_mice/06.png)
+
+Như vậy `hex(ord('1') + ord('P')) = '0x81'` nó là câu lệnh add ))). Thử kết quả là `NOP` thì code lại chạy tiếp tục trong vùng nhớ đó và báo lỗi, và thử `opcode RET = 'C3'` câu lệnh cuối của mỗi hàm thì nó trở về và xong.
+
+![retn](/src/2022/Flare-on9/04_darn_mice/07_retn.png)
+
+Giờ viết mà code để tìm pass nhá:
+
+```py
+str_magic = [0x50, 0x5E, 0x5E, 0xA3, 0x4F, 0x5B, 0x51, 0x5E, 0x5E, 0x97, 0xA3, 0x80, 0x90, 0xA3, 0x80, 0x90, 0xA3, 0x80, 0x90, 0xA3, 0x80, 0x90, 0xA3, 0x80, 0x90, 0xA3, 0x80, 0x90, 0xA3, 0x80, 0x90, 0xA2, 0xA3, 0x6B, 0x7F]
+password = "".join([chr(0xC3 - m) for m in str_magic])
+print(password)
+#see three, C3 C3 C3 C3 C3 C3 C3! XD
+```
+
+Và chạy password vừa tìm được thì ta nhận được:
+![result](/src/2022/Flare-on9/04_darn_mice/08_result.png)
+
+Xong flag sẽ là: `i_w0uld_l1k3_to_RETurn_this_joke@flare-on.com`
+
 <!-- http://diendan.congdongcviet.com/threads/t35646::calling-syntax-calling-convertion.cpp -->
 ### 5: t8
 
