up task stegorev

--- a/_posts/2023/2023-01-21-knightCTF_2023.md
+++ b/_posts/2023/2023-01-21-knightCTF_2023.md
@@ -748,5 +748,97 @@ if __name__ == '__main__':
 
 ![title](/src/2023/KnightCTF2023/Stegorev/title.png)
 
+Trong nhiệm vụ lần này thì cho ta một bức ảnh thôi, với tiêu đề `Stegorev` thì chắc chắn bài này ta cần tìm thông tin hay file bị giấu ở ảnh này để từ đó reverse nó ra.
+
+Khi ta tìm kiếm các thủ thuật, [Hacktricks](https://book.hacktricks.xyz/crypto-and-stego/stego-tricks) về stego, thì đã tìm được `stegcracker` dùng để bung file đó ra xem có gì không. Sau một thời gian chờ đợi password thì cuối cùng cũng ra (thư viện password mặc định) một file thực thi trên linux.
+
+Với cả xem tham khảo thêm thì ta nhận được thêm 1 tool nữa là [`Stegseek`](https://github.com/RickdeJager/stegseek).
+
+Quả thật nhanh chưa đầy 3s ấy vậy mà trước mình phải chờ hẳn 30 phút🥲. (link tham khảo writeup này nè [...](https://gynvael.coldwind.pl/?lang=en&id=761))
+
+![stegseek](/src/2023/KnightCTF2023/Stegorev/00_stegseek.png)
+
+Ta nhận được file `kctf-rng70.jpg.out` tiếp theo đến phần reverse. Kiểm tra bằng ida pro thì phát hiện là đầu tiên kiểm tra xem có tồn tại file với tên `ckrIupRS782prsdsf`:
+
+```c
+__int64 __fastcall main(int a1, char **a2, char **a3)
+{
+  __int64 v3; // rax
+  char v5[32]; // [rsp+0h] [rbp-A0h] BYREF
+  char v6[47]; // [rsp+20h] [rbp-80h] BYREF
+  char v7; // [rsp+4Fh] [rbp-51h] BYREF
+  char v8[32]; // [rsp+50h] [rbp-50h] BYREF
+  char v9[40]; // [rsp+70h] [rbp-30h] BYREF
+
+  std::allocator<char>::allocator(&v7, a2, a3);
+  std::string::basic_string(v6, "ckrIupRS782prsdsf", &v7); //cái này để truyền địa chỉ cho v6 trỏ tới chuỗi ckrIupRS782prsdsf
+  sub_2486(v5, v6); // cần check
+  std::string::~string(v6);
+  std::allocator<char>::~allocator(&v7);
+  if ( (unsigned __int8)sub_2C13(v5, "The file maybe lost in the matrix. Try hard to find it") ) //hàm này để so sánh nếu bằng với chuỗi này thì exit
+    exit(0);
+  std::string::basic_string(v9, v5);
+  sub_266F(v8, v9);
+  v3 = std::operator<<<char>(&std::cout, v8);
+  std::ostream::operator<<(v3, &std::endl<char,std::char_traits<char>>);
+  std::string::~string(v8);
+  std::string::~string(v9);
+  std::string::~string(v5);
+  return 0LL;
+}
+```
+
+Chúng ta cùng đi vào hàm `sub_2486()` kiểm tra xem trong làm gì:
+
+```c
+__int64 __fastcall sub_2486(__int64 a1, __int64 a2)
+{
+  __int64 v2; // rdx
+  __int64 v3; // rax
+  __int64 v4; // rax
+  char v6[32]; // [rsp+10h] [rbp-240h] BYREF
+  char v7[527]; // [rsp+30h] [rbp-220h] BYREF
+  char v8[9]; // [rsp+23Fh] [rbp-11h] BYREF
+
+  std::ifstream::basic_ifstream(v7);
+  std::ifstream::open(v7, a2, 8LL);
+  if ( (unsigned __int8)std::ifstream::is_open(v7) ) // mở file có tên v7 là v2 mà mình đã bàn lúc nãy
+  {
+    std::string::basic_string(v6);
+    std::operator>><char>(v7, v6);
+    v3 = std::operator<<<std::char_traits<char>>(&std::cout, "Flag: ");
+    v4 = std::operator<<<char>(v3, v6);
+  }
+  else
+  {
+    std::allocator<char>::allocator(v8, a2, v2);
+    std::string::basic_string(v6, "The file maybe lost in the matrix. Try hard to find it", v8);
+    std::allocator<char>::~allocator(v8);
+    v4 = std::operator<<<char>(&std::cout, v6);
+  }
+  std::ostream::operator<<(v4, &std::endl<char,std::char_traits<char>>);
+  std::string::basic_string(a1, v6);
+  std::string::~string(v6);
+  std::ifstream::~ifstream(v7);
+  return a1;
+}
+```
+
+Hàm này kiểm tra xem có file tên `ckrIupRS782prsdsf` có tồn tại không? nếu có in ra flag còn nếu không thì sẽ in và gán cho nó chuỗi rồi return chuỗi `The file maybe lost in the matrix. Try hard to find it`.
+
+Như vậy nếu thỏa mãn thì ta sẽ nhận được như sau:
+
+![open file](/src/2023/KnightCTF2023/Stegorev/01_open_file.png)
+
+Như vậy là đã thỏa mãn việc tồn tại file nhưng vẫn không ra đúng. Kiểm tra lại ta thấy là họ lấy giá trị có trong file mình vừa tạo mà lúc nãy mình tạo file rỗng.
+
+Sau khi debug lại ta có: ta truyền dữ liệu bất kì cho file đó rồi chạy thì hiện ra flag kiểu so sánh `?==?` với `JBVE~k_lRciOX*=(HG=,0KKEl` mà không biết cái này là gì😂.
+
+Thế là sửa file đó ném vào file đó cái đó thì ta nhận được flag hí hí....
+
+![result](/src/2023/KnightCTF2023/Stegorev/02_result.png)
+
+Như vậy là xong bài được nhiều điểm nhất mà tôi cũng tiếc nhất vì làm được đến coi như là 90% hơn rồi.
+
 <!-- https://gynvael.coldwind.pl/?lang=en&id=761 -->
 <!-- https://www.tutorialspoint.com/c_standard_library/c_function_signal.htm -->
