fix error text knightctf task

--- a/_posts/2023/2023-01-21-knightCTF_2023.md
+++ b/_posts/2023/2023-01-21-knightCTF_2023.md
@@ -738,8 +738,6 @@ if __name__ == '__main__':
 #KCTF{:::::siUUU::::::mEssi::::::::::::::::::::::::::::::::is::::::gOat}
 ```
 
-`KCTF{:::::siUUU::::::mEssi::::::::::::::::::::::::::::::::is::::::gOat}`
-
 ### 6: Stegorev
 
 ![title](/src/2023/KnightCTF2023/Stegorev/title.png)
@@ -836,5 +834,4 @@ Thế là sửa file đó ném vào file đó cái đó thì ta nhận được 
 
 Như vậy là xong bài được nhiều điểm nhất mà tôi cũng tiếc nhất vì làm được đến coi như là 90% hơn rồi.
 
-<!-- https://gynvael.coldwind.pl/?lang=en&id=761 -->
-<!-- https://www.tutorialspoint.com/c_standard_library/c_function_signal.htm -->
+Cảm ơn mọi người đã đọc đến đây. Hẹn mọi người tại các bài viết khác nhé... Chúc mọi người thành công.🏆
