--- a/_posts/2022/2022-10-01-flare_on9_2022.md
+++ b/_posts/2022/2022-10-01-flare_on9_2022.md
@@ -209,8 +209,85 @@ Và chạy password vừa tìm được thì ta nhận được:
 
 Xong flag sẽ là: `i_w0uld_l1k3_to_RETurn_this_joke@flare-on.com`
 
-<!-- http://diendan.congdongcviet.com/threads/t35646::calling-syntax-calling-convertion.cpp -->
 ### 5: t8
+
+```text
+FLARE FACT #823: Studies show that C++ Reversers have fewer friends on average than normal people do. That's why you're here, reversing this, instead of with them, because they don't exist.
+
+We’ve found an unknown executable on one of our hosts. The file has been there for a while, but our networking logs only show suspicious traffic on one day. Can you tell us what happened?
+
+7-zip password: flare
+```
+
+Ta nhận được 2 file `t8.exe` và `trafic.pcapng` - file chứa các thông tin networking log của file nghi ngờ.  Sử dụng `Wireshark` để quan sát tập tin chứa dữ liệu mạng.
+
+Đối với TCP Stream là loại HTTP thì Wireshark cho phép thao tác để lấy dữ liệu trong trường data của method POST một cách dễ dàng.
+
+Quay trở lại với file `t8.exe`, để bước vào phân tích thì cần kiểm tra một số thông tin cần thiết liên quan. Đọc metadata sử dụng `CFF Explorer` cho thấy tập tin là **PE32** và có khả năng là sử dụng chương trình biên dịch là VS C++. Do đó cần sử dụng công cụ như x64dbg, IDA Pro hoặc Ghidra để phân tích tĩnh và động.
+
+Trong hàm main có kiểm tra điều kiện:
+
+```c
+while ( sub_404570(xmmword_45088C, DWORD1(xmmword_45088C), DWORD2(xmmword_45088C), HIDWORD(xmmword_45088C)) != 15 )
+    Sleep(0x2932E00u);
+```
+Ta kiểm tra xem `xmmword_45088C` biến này là gì? Kiểm tra xem xref các các địa chỉ `xmmword_45088C`, thì kiếm được hàm `sub_401020()` khởi tạo giá trị này. Biến này được gná bằng thời gian hiện tại của chương trình lúc thực thi.
+
+```c
+int sub_401020()
+{
+  struct _SYSTEMTIME SystemTime; // [esp+4h] [ebp-20h] BYREF
+  int v2; // [esp+20h] [ebp-4h]
+
+  v2 = 0;
+  sub_405930(&dword_450874, L"FO9", 3);
+  GetLocalTime(&SystemTime);
+  srand(SystemTime.wMilliseconds + 1000 * (SystemTime.wSecond + 60 * SystemTime.wMinute));
+  dword_450870 = rand();
+  xmmword_45088C = (__int128)SystemTime;
+  return atexit(sub_43DC50);
+}
+```
+
+Tiếp đến là đi sâu vào hàm `sub_404570` thì được:
+
+```c
+int __cdecl sub_404570(unsigned int a1, unsigned int a2)
+{
+  unsigned int v2; // ecx
+  int v3; // esi
+  unsigned int v4; // eax
+  float v5; // xmm0_4
+  float v9; // [esp+2Ch] [ebp+14h]
+
+  v2 = HIWORD(a1);
+  v3 = (unsigned __int16)a1 - 1;
+  if ( HIWORD(a1) > 2u )
+    v3 = (unsigned __int16)a1;
+  v4 = v2 + 12;
+  if ( v2 > 2 )
+    v4 = HIWORD(a1);
+  v9 = (float)((float)((double)(int)(v3 / 100 / 4
+                                   + HIWORD(a2)
+                                   + (int)((double)(v3 + 4716) * 365.25)
+                                   - (int)((double)(int)(v4 + 1) * -30.6001)
+                                   - v3 / 100
+                                   + 2)
+                     - 1524.5)
+             - 2451549.5)
+     / 29.53;
+  v5 = floor(v9);
+  return (int)roundf((float)(v9 - v5) * 29.53);
+}
+```
+
+Có các con số lạ thì ta tra google xem nó là gì thì nhận thấy đây là hàm tính toán có liên quan tới xác định chu kì mặt trăng (Moon phase). Với kết quả `sub_404570() ==15` thì có thể xác định là thời điểm hiện tại là ngày rằm (trăng tròn).
+
+Để vượt qua kiểm tra thì đơn giản là ta chỉnh lại thời gian ngày là ngày rằm (full moon).
+
+Chạy chương trình và bắt dữ liệu mạng bằng Wireshark ta biết t8.exe sẽ phân giải tên miền flare-on.com và kết nối bằng giao thức HTTP.
+
+(tiếp sẽ có sau)
 
 ### 6: alamode
 
