fix post flare-on

--- a/_posts/2022/2022-10-01-flare_on9_2022.md
+++ b/_posts/2022/2022-10-01-flare_on9_2022.md
@@ -290,7 +290,7 @@ Chạy chương trình và bắt dữ liệu mạng bằng Wireshark ta biết t
 
 (tiếp sẽ có sau)
 
-### 6: alamode
+<!-- ### 6: alamode
 
 ### 7: anode
 
@@ -300,7 +300,7 @@ Chạy chương trình và bắt dữ liệu mạng bằng Wireshark ta biết t
 
 ### 10: Nur_geträumt
 
-### 11: the_challenge_that_shall_not_be_named
+### 11: the_challenge_that_shall_not_be_named -->
 
 <!-- 
 https://sec.vnpt.vn/2022/11/flare-on-9-writeup-part2-chal8-11/
